# MagiqueMessenger

./: CMakeLists.txt  README.md  main.cpp
examples/client/: client_main.cpp
examples/server/: server_main.cpp
src/client/: Client.cpp  Client.hpp
src/interfaces/: IClient.hpp  IConnection.h  IConnection.hpp  IMessenger.h  IMessenger.hpp  IServer.hpp
src/managers/connection/: ConnectionManager.cpp  ConnectionManager.hpp
src/managers/messenger/: MessengerManager.cpp  MessengerManager.hpp
src/server/: Server.cpp  Server.hpp
